@@ -8,6 +8,7 @@ export(add_multifreq)
 export(as.data.frame)
 export(average_ic)
 export(calc_complexity)
+export(calc_windows)
 export(cbind)
 export(colMeans)
 export(colSums)
@@ -84,6 +85,7 @@ export(ungap)
 export(update_motifs)
 export(view_logo)
 export(view_motifs)
+export(window_string)
 export(write_homer)
 export(write_jaspar)
 export(write_matrix)
@@ -140,6 +142,7 @@ importFrom(Rcpp,sourceCpp)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,Rle)
 importFrom(S4Vectors,aggregate)
+importFrom(S4Vectors,isTRUEorFALSE)
 importFrom(S4Vectors,safeExplode)
 importFrom(S4Vectors,wmsg)
 importFrom(ggplot2,aes)
